--- a/miniprogram/xcx/app.json
+++ b/miniprogram/xcx/app.json
@@ -2,7 +2,8 @@
   "pages":[
     "pages/index/index",
     "pages/myfirstpage/first",
-    "pages/logs/logs"
+    "pages/logs/logs",
+    "pages/canvas/canvas"
   ],
   "window":{
     "backgroundTextStyle":"light",
@@ -25,6 +26,10 @@
       {
         "pagePath": "pages/logs/logs",
         "text": "日志"
+      },
+      {
+        "pagePath": "pages/canvas/canvas",
+        "text": "canvas"
       }
     ]
   },
